--- a/TransmittalCreator/TransmittalCreator.csproj
+++ b/TransmittalCreator/TransmittalCreator.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Models\AttributModel.cs" />
     <Compile Include="Models\BlockModel.cs" />
     <Compile Include="Models\FileModel.cs" />
+    <Compile Include="Models\ObjectCopier.cs" />
     <Compile Include="Models\PrintModel.cs" />
     <Compile Include="Models\RelayCommand.cs" />
     <Compile Include="Models\Sheet.cs" />
