--- a/TransmittalCreator/TransmittalCreator.csproj
+++ b/TransmittalCreator/TransmittalCreator.csproj
@@ -114,6 +114,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Logic\" />
     <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
