--- a/TransmittalCreator/TransmittalCreator.csproj
+++ b/TransmittalCreator/TransmittalCreator.csproj
@@ -97,6 +97,7 @@
     <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ComponentModel.Annotations.4.7.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
       <SpecificVersion>False</SpecificVersion>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
@@ -128,7 +129,9 @@
     <Compile Include="Models\AttributModel.cs" />
     <Compile Include="Models\BlockModel.cs" />
     <Compile Include="Models\FileModel.cs" />
-    <Compile Include="Models\ObjectCopier.cs" />
+    <Compile Include="Services\FileEditor.cs" />
+    <Compile Include="Services\LayerManipulation.cs" />
+    <Compile Include="Services\ObjectCopier.cs" />
     <Compile Include="Models\PrintModel.cs" />
     <Compile Include="Models\RelayCommand.cs" />
     <Compile Include="Models\Sheet.cs" />
