--- a/TransmittalCreator/packages.config
+++ b/TransmittalCreator/packages.config
@@ -1,10 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EPPlus" version="5.4.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="2.0.0" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="4.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="ShowMeTheXAML" version="2.0.0" targetFramework="net472" />
-  <package id="ShowMeTheXAML.MSBuild" version="2.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.IO.Packaging" version="4.5.0" targetFramework="net472" />
 </packages>
