have to finish print from diff files

--- a/TransmittalCreator/TransmittalCreator.csproj
+++ b/TransmittalCreator/TransmittalCreator.csproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <Compile Include="Archive.cs" />
     <Compile Include="Models\FilenameModel.cs" />
+    <Compile Include="Models\LayoutModel.cs" />
     <Compile Include="PdfCreator.xaml.cs">
       <DependentUpon>PdfCreator.xaml</DependentUpon>
     </Compile>
